pet section complete

--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
                <h1 class="mb-12 text-2xl sm:text-4xl adlam-display">
                   Trending Pet Products
                </h1>
-               <div class="flex justify-between">
-                  <div
-                     class="relative w-[32%] min-h-[420px] rounded-xl bg-[#F9DF8A]"
-                  >
+               <div
+                  class="grid grid-cols-1 lg:grid-cols-[40%_auto] xl:grid-cols-[32%_auto] gap-4"
+               >
+                  <div class="relative min-h-[420px] rounded-xl bg-[#F9DF8A]">
                      <div class="px-8">
                         <h1 class="mt-14 mb-6 text-3xl adlam-display">
                            T- Shirt For Dogs
@@ -207,9 +207,9 @@
                         <img src="assets/cute-pet-small.png" alt="" />
                      </div>
                   </div>
-                  <div class="grid grid-cols-3 w-[67%] gap-4">
+                  <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
                      <div
-                        class="flex px-4 py-4 bg-white rounded-md gap-4 border border-gray-200"
+                        class="flex px-4 py-4 bg-white rounded-lg gap-4 border border-gray-200"
                      >
                         <div class="bg-[#FFF9F4] px-4 py-4 rounded-lg">
                            <img src="assets/dog-cartoon.png" alt="" />
@@ -224,7 +224,7 @@
                         </div>
                      </div>
                      <div
-                        class="flex px-4 py-4 bg-white rounded-md gap-4 border border-gray-200"
+                        class="flex px-4 py-4 bg-white rounded-lg gap-4 border border-gray-200"
                      >
                         <div class="bg-[#FFF9F4] px-4 py-4 rounded-lg">
                            <img src="assets/fish-cartoon.png" alt="" />
@@ -239,7 +239,7 @@
                         </div>
                      </div>
                      <div
-                        class="flex px-4 py-4 bg-white rounded-md gap-4 border border-gray-200"
+                        class="flex px-4 py-4 bg-white rounded-lg gap-4 border border-gray-200"
                      >
                         <div class="bg-[#FFF9F4] px-4 py-4 rounded-lg">
                            <img src="assets/bird-cartoon.png" alt="" />
@@ -254,7 +254,7 @@
                         </div>
                      </div>
                      <div
-                        class="flex px-4 py-4 bg-white rounded-md gap-4 border border-gray-200"
+                        class="flex px-4 py-4 bg-white rounded-lg gap-4 border border-gray-200"
                      >
                         <div class="bg-[#FFF9F4] px-4 py-4 rounded-lg">
                            <img src="assets/rabbit-cartoon.png" alt="" />
@@ -269,7 +269,7 @@
                         </div>
                      </div>
                      <div
-                        class="flex px-4 py-4 bg-white rounded-md gap-4 border border-gray-200"
+                        class="flex px-4 py-4 bg-white rounded-lg gap-4 border border-gray-200"
                      >
                         <div class="bg-[#FFF9F4] px-4 py-4 rounded-lg">
                            <img src="assets/bird-cartoon.png" alt="" />
@@ -284,7 +284,7 @@
                         </div>
                      </div>
                      <div
-                        class="flex px-4 py-4 bg-white rounded-md gap-4 border border-gray-200"
+                        class="flex px-4 py-4 bg-white rounded-lg gap-4 border border-gray-200"
                      >
                         <div class="bg-[#FFF9F4] px-4 py-4 rounded-lg">
                            <img src="assets/pet-couch.png" alt="" />
@@ -299,7 +299,7 @@
                         </div>
                      </div>
                      <div
-                        class="flex px-4 py-4 bg-white rounded-md gap-4 border border-gray-200"
+                        class="flex px-4 py-4 bg-white rounded-lg gap-4 border border-gray-200"
                      >
                         <div class="bg-[#FFF9F4] px-4 py-4 rounded-lg">
                            <img src="assets/fish-cartoon.png" alt="" />
@@ -314,7 +314,7 @@
                         </div>
                      </div>
                      <div
-                        class="flex px-4 py-4 bg-white rounded-md gap-4 border border-gray-200"
+                        class="flex px-4 py-4 bg-white rounded-lg gap-4 border border-gray-200"
                      >
                         <div class="bg-[#FFF9F4] px-4 py-4 rounded-lg">
                            <img src="assets/pet-couch.png" alt="" />
@@ -329,7 +329,7 @@
                         </div>
                      </div>
                      <div
-                        class="flex px-4 py-4 bg-white rounded-md gap-4 border border-gray-200"
+                        class="hidden md:flex px-4 py-4 bg-white rounded-lg gap-4 border border-gray-200"
                      >
                         <div class="bg-[#FFF9F4] px-4 py-4 rounded-lg">
                            <img src="assets/rabbit-cartoon.png" alt="" />
