--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <!-- main sections -->
       <main>
          <!-- category section -->
-         <section class="w-[92%] sm:container mx-auto mt-6 sm:mt-36">
+         <section class="w-[92%] sm:container mx-auto mt-14 sm:mt-36">
             <!-- category title -->
             <h1 class="mb-6 sm:mb-12 text-2xl sm:text-4xl adlam-display">
                Browse By Categories
@@ -182,9 +182,11 @@
          </section>
 
          <!-- Pet product section -->
-         <section class="w-full mt-14 sm:mt-32 py-8 sm:py-36 sm:bg-[#FFF9F4]">
+         <section
+            class="w-full mt-14 sm:mt-32 sm:border-b border-gray-400 py-4 sm:py-36 sm:bg-[#FFF9F4]"
+         >
             <div class="w-[92%] sm:container mx-auto">
-               <h1 class="mb-12 text-2xl sm:text-4xl adlam-display">
+               <h1 class="mb-6 sm:mb-12 text-2xl sm:text-4xl adlam-display">
                   Trending Pet Products
                </h1>
                <div
@@ -347,8 +349,319 @@
                </div>
             </div>
          </section>
+         <!-- Our latest Items section  -->
+         <section class="mt-8 sm:mt-0 w-full py-8 sm:py-36 sm:bg-[#FFF9F4]">
+            <div class="w-[92%] sm:container mx-auto">
+               <!-- section title -->
+               <h1 class="mb-6 sm:mb-12 text-2xl sm:text-4xl adlam-display">
+                  Our latest items
+               </h1>
+               <!-- Items cards -->
+               <div
+                  class="grid grid-cols-2 sm:grid-cols-3 xl:grid-cols-6 gap-8 xl:gap-5"
+               >
+                  <div class="card bg-base-100 shadow-xl">
+                     <figure class="px-10 pt-6 xl:pt-10 overflow-hidden">
+                        <img
+                           src="assets/hp-lemon.png"
+                           alt="Shoes"
+                           class="rounded-xl w-[80%] xl:w-[90%]"
+                        />
+                     </figure>
+                     <div
+                        class="py-4 xl:py-8 card-body items-center text-center"
+                     >
+                        <h2 class="card-title text-lg adlam-display">
+                           Hp lemon
+                        </h2>
+                        <p class="text-xs font-lighr text-gray-400">
+                           Hp lemon Cat Food Gourmet Seafood Flavor 20kg
+                        </p>
+                        <div class="card-actions">
+                           <button class="btn rounded-lg bg-yellow-300">
+                              Buy Now
+                           </button>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="card bg-base-100 shadow-xl">
+                     <figure class="px-10 pt-6 xl:pt-10 overflow-hidden">
+                        <img
+                           src="assets/Maxpet-Coffee.png"
+                           alt="Shoes"
+                           class="rounded-xl w-[80%] xl:w-[90%]"
+                        />
+                     </figure>
+                     <div
+                        class="py-4 xl:py-8 card-body items-center text-center"
+                     >
+                        <h2 class="card-title text-lg adlam-display">
+                           Maxpet coffee
+                        </h2>
+                        <p class="text-xs font-lighr text-gray-400">
+                           Maxpet coffee Cat Food Gourmet Seafood Flavor 20kg
+                        </p>
+                        <div class="card-actions">
+                           <button class="btn rounded-lg bg-yellow-300">
+                              Buy Now
+                           </button>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="card bg-base-100 shadow-xl">
+                     <figure class="px-10 pt-6 xl:pt-10 overflow-hidden">
+                        <img
+                           src="assets/Enrich-Lemon.png"
+                           alt="Shoes"
+                           class="rounded-xl w-[80%] xl:w-[90%]"
+                        />
+                     </figure>
+                     <div
+                        class="py-4 xl:py-8 card-body items-center text-center"
+                     >
+                        <h2 class="card-title text-lg adlam-display">
+                           Enrich lemon
+                        </h2>
+                        <p class="text-xs font-lighr text-gray-400">
+                           Enrich lemon Cat Food Gourmet Seafood Flavor 20kg
+                        </p>
+                        <div class="card-actions">
+                           <button class="btn rounded-lg bg-yellow-300">
+                              Buy Now
+                           </button>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="card bg-base-100 shadow-xl">
+                     <figure class="px-10 pt-6 xl:pt-10 overflow-hidden">
+                        <img
+                           src="assets/sn-lav.png"
+                           alt="Shoes"
+                           class="rounded-xl w-[80%] xl:w-[90%]"
+                        />
+                     </figure>
+                     <div
+                        class="py-4 xl:py-8 card-body items-center text-center"
+                     >
+                        <h2 class="card-title text-lg adlam-display">Sn lav</h2>
+                        <p class="text-xs font-lighr text-gray-400">
+                           Sn lav Cat Food Gourmet Seafood Flavor 20kg
+                        </p>
+                        <div class="card-actions">
+                           <button class="btn rounded-lg bg-yellow-300">
+                              Buy Now
+                           </button>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="card bg-base-100 shadow-xl">
+                     <figure class="px-10 pt-6 xl:pt-10 overflow-hidden">
+                        <img
+                           src="assets/kat-sea.png"
+                           alt="Shoes"
+                           class="rounded-xl w-[80%] xl:w-[90%]"
+                        />
+                     </figure>
+                     <div
+                        class="py-4 xl:py-8 card-body items-center text-center"
+                     >
+                        <h2 class="card-title text-lg adlam-display">
+                           Kat sea
+                        </h2>
+                        <p class="text-xs font-lighr text-gray-400">
+                           kat sea Cat Food Gourmet Seafood Flavor 20kg
+                        </p>
+                        <div class="card-actions">
+                           <button class="btn rounded-lg bg-yellow-300">
+                              Buy Now
+                           </button>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="card bg-base-100 shadow-xl">
+                     <figure class="px-10 pt-6 xl:pt-10 overflow-hidden">
+                        <img
+                           src="assets/whiskas-pouch.png"
+                           alt="Shoes"
+                           class="rounded-xl w-[80%] xl:w-[90%]"
+                        />
+                     </figure>
+                     <div
+                        class="py-4 xl:py-8 card-body items-center text-center"
+                     >
+                        <h2 class="card-title text-lg adlam-display">
+                           whiskas pouch
+                        </h2>
+                        <p class="text-xs font-lighr text-gray-400">
+                           Whiskas pouch Cat Food Gourmet Seafood Flavor 20kg
+                        </p>
+                        <div class="card-actions">
+                           <button class="btn rounded-lg bg-yellow-300">
+                              Buy Now
+                           </button>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
+         <!-- Every day low price -->
+         <section class="py-8 sm:py-36">
+            <div class="w-[92%] sm:container mx-auto">
+               <h1 class="mb-6 sm:mb-12 text-2xl sm:text-4xl adlam-display">
+                  Everyday low price
+               </h1>
+               <div
+                  class="grid grid-cols-1 grid-rows-2 md:grid-rows-1 md:grid-cols-[60%_auto] gap-6 min-h-[780px] md:min-h-[280px] lg:min-h-[350px] xl:min-h-[430px] 2xl:min-h-[520px]"
+               >
+                  <div
+                     class="relative h-full pt-10 lg:pt-0 pl-10 lg:pl-14 xl:pl-24 rounded-2xl flex md:items-start lg:items-center justify-between bg-linear-145 from-[#F8CCFB] to-[#ACD2FD]"
+                  >
+                     <div class="relative">
+                        <p class="hidden md:block lg:text-base xl:text-lg">
+                           Under Price
+                        </p>
+                        <h3
+                           class="mb-6 md:mb-0 text-3xl sm:text-4xl md:text-2xl lg:text-3xl xl:text-4xl adlam-display"
+                        >
+                           Pet Grooming Mitt
+                        </h3>
+                        <h4
+                           class="hidden md:block mt-2 mb-4 text-white md:text-xl lg:text-[22px] xl:text-2xl adlam-display"
+                        >
+                           (Easy Hair Removal)
+                        </h4>
+                        <h1
+                           class="text-5xl sm:text-5xl md:text-3xl lg:text-4xl xl:text-[3.5rem] text-white md:text-black adlam-display"
+                        >
+                           $7.99
+                        </h1>
+                     </div>
+                     <div class="w-[50%] sm:w-[45%] absolute bottom-0 right-0">
+                        <img
+                           src="assets/cute-dog-mid.png"
+                           alt=""
+                           class="w-full"
+                        />
+                     </div>
+                  </div>
+                  <div
+                     class="h-full px-12 md:px-4 xl:px-12 py-12 md:py-8 xl:py-14 rounded-2xl bg-linear-145 from-[#FFF9F4] to-[#F9DF8A] relative"
+                  >
+                     <div class="relative z-1">
+                        <h3
+                           class="text-3xl sm:text-4xl md:text-2xl lg:text-3xl xl:text-4xl adlam-display mb-6 md:mb-1 ml-0.5"
+                        >
+                           T-Shirt for Dogs
+                        </h3>
+                        <h4
+                           class="text-5xl md:text-3xl lg:text-4xl xl:text-[3.5rem] text-yellow-300 adlam-display"
+                        >
+                           $7.99
+                        </h4>
+                     </div>
+                     <div
+                        class="w-[50%] sm:w-[40%] md:w-[56%] absolute bottom-0 right-0"
+                     >
+                        <img
+                           class="w-full"
+                           src="assets/cute-pet-mid.png"
+                           alt=""
+                        />
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
       <!-- footer sections -->
-      <footer></footer>
+      <footer
+         class="h-[780px] md:h-[500px] lg:h-[654px] bg-[#FFDC2680] mt-96 md:mt-60"
+      >
+         <div
+            class="w-[92%] sm:container pb-14 md:pb-[140px] mx-auto h-full flex flex-col justify-end relative"
+         >
+            <div
+               class="py-10 px-20 grid grid-cols-1 md:grid-cols-[25%_auto] place-items-center md:place-items-start gap-5 md:gap-28 bg-[#FFF9F4] rounded-2xl absolute w-full top-0 left-0 translate-y-[-50%]"
+            >
+               <div class="w-[60%] md:w-full">
+                  <img class="w-full" src="assets/cute-pet-mid.png" alt="" />
+               </div>
+               <div
+                  class="flex flex-col items-center md:items-start justify-center"
+               >
+                  <h1 class="text-3xl lg:text-4xl adlam-display mb-5">
+                     Get awesome News!
+                  </h1>
+                  <p class="text-center text-sm lg:text-xl mb-5 lg:mb-9">
+                     Exclusive training tips, ticks, product deals and more.
+                  </p>
+                  <label
+                     class="border-none flex items-center gap-2 py-3 lg:py-[18px] pl:3 lg:pl-5 pr-20 lg:pr-72 bg-white rounded-lg"
+                  >
+                     <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 16 16"
+                        fill="currentColor"
+                        class="h-4 w-4 opacity-70"
+                     >
+                        <path
+                           d="M2.5 3A1.5 1.5 0 0 0 1 4.5v.793c.026.009.051.02.076.032L7.674 8.51c.206.1.446.1.652 0l6.598-3.185A.755.755 0 0 1 15 5.293V4.5A1.5 1.5 0 0 0 13.5 3h-11Z"
+                        />
+                        <path
+                           d="M15 6.954 8.978 9.86a2.25 2.25 0 0 1-1.956 0L1 6.954V11.5A1.5 1.5 0 0 0 2.5 13h11a1.5 1.5 0 0 0 1.5-1.5V6.954Z"
+                        />
+                     </svg>
+                     <input
+                        type="text"
+                        class="grow border-none text-black opacity-80 text-sm font-sora cursor-text"
+                        placeholder="Enter email...."
+                     />
+                  </label>
+                  <button
+                     class="btn px-8 py-3 bg-yellow-300 rounded-lg mt-5 lg:mt-9"
+                  >
+                     Subscribe
+                  </button>
+               </div>
+            </div>
+            <div
+               class="flex flex-col gap-8 md:flex-row justify-between align-bottom"
+            >
+               <div>
+                  <div class="flex items-center gap-3 mb-6">
+                     <img src="assets/logo-footer.png" alt="" />
+                     <h1 class="text-2xl lg:text-[26px]">
+                        Browse<span class="text-yellow-300">4</span>Pets
+                     </h1>
+                  </div>
+                  <p class="text-sm lg:text-lg opacity-80">
+                     Discover a world of treats, toys, and
+                     <br />essentials handpicked for your furry <br />friends
+                  </p>
+               </div>
+               <div class="flex align-bottom">
+                  <ul class="flex flex-col gap-1 md:gap-5 lg:gap-8 justify-end">
+                     <li class="text-sm lg:text-base font-medium">
+                        Find a pet
+                     </li>
+                     <li class="text-sm lg:text-base font-medium">Breeds</li>
+                     <li class="text-sm lg:text-base font-medium">
+                        Contact us
+                     </li>
+                  </ul>
+               </div>
+               <div class="flex flex-col justify-end gap-2">
+                  <h4 class="text-sm lg:text-base">Follow Us</h4>
+                  <div class="flex gap-7">
+                     <i class="fa-brands fa-facebook text-xl lg:text-2xl"></i>
+                     <i class="fa-brands fa-instagram text-xl lg:text-2xl"></i>
+                     <i class="fa-brands fa-linkedin text-xl lg:text-2xl"></i>
+                     <i class="fa-brands fa-youtube text-xl lg:text-2xl"></i>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </footer>
    </body>
 </html>
