--- a/index.html
+++ b/index.html
@@ -576,10 +576,10 @@
       </main>
       <!-- footer sections -->
       <footer
-         class="h-[780px] md:h-[500px] lg:h-[654px] bg-[#FFDC2680] mt-96 md:mt-60"
+         class="h-[780px] md:h-[500px] lg:h-[654px] bg-[#FFDC2680] mt-96 md:mt-32 lg:mt-40 xl:mt-60"
       >
          <div
-            class="w-[92%] sm:container pb-14 md:pb-[140px] mx-auto h-full flex flex-col justify-end relative"
+            class="w-[92%] sm:container pb-14 md:pb-24 lg:pb-[140px] mx-auto h-full flex flex-col justify-end relative"
          >
             <div
                class="py-10 px-20 grid grid-cols-1 md:grid-cols-[25%_auto] place-items-center md:place-items-start gap-5 md:gap-28 bg-[#FFF9F4] rounded-2xl absolute w-full top-0 left-0 translate-y-[-50%]"
