--- a/index.html
+++ b/index.html
@@ -508,12 +508,15 @@
          <!-- Every day low price -->
          <section class="py-8 sm:py-36">
             <div class="w-[92%] sm:container mx-auto">
+               <!-- section title -->
                <h1 class="mb-6 sm:mb-12 text-2xl sm:text-4xl adlam-display">
                   Everyday low price
                </h1>
+               <!-- price card  -->
                <div
                   class="grid grid-cols-1 grid-rows-2 md:grid-rows-1 md:grid-cols-[60%_auto] gap-6 min-h-[780px] md:min-h-[280px] lg:min-h-[350px] xl:min-h-[430px] 2xl:min-h-[520px]"
                >
+                  <!-- card -1 -->
                   <div
                      class="relative h-full pt-10 lg:pt-0 pl-10 lg:pl-14 xl:pl-24 rounded-2xl flex md:items-start lg:items-center justify-between bg-linear-145 from-[#F8CCFB] to-[#ACD2FD]"
                   >
@@ -545,6 +548,7 @@
                         />
                      </div>
                   </div>
+                  <!-- card 02 -->
                   <div
                      class="h-full px-12 md:px-4 xl:px-12 py-12 md:py-8 xl:py-14 rounded-2xl bg-linear-145 from-[#FFF9F4] to-[#F9DF8A] relative"
                   >
@@ -581,6 +585,7 @@
          <div
             class="w-[92%] sm:container pb-14 md:pb-24 lg:pb-[140px] mx-auto h-full flex flex-col justify-end relative"
          >
+            <!-- Footer card -->
             <div
                class="py-10 px-20 grid grid-cols-1 md:grid-cols-[25%_auto] place-items-center md:place-items-start gap-5 md:gap-28 bg-[#FFF9F4] rounded-2xl absolute w-full top-0 left-0 translate-y-[-50%]"
             >
@@ -625,9 +630,11 @@
                   </button>
                </div>
             </div>
+            <!-- Footer content -->
             <div
                class="flex flex-col gap-8 md:flex-row justify-between align-bottom"
             >
+               <!-- Footer title -->
                <div>
                   <div class="flex items-center gap-3 mb-6">
                      <img src="assets/logo-footer.png" alt="" />
@@ -637,9 +644,11 @@
                   </div>
                   <p class="text-sm lg:text-lg opacity-80">
                      Discover a world of treats, toys, and
-                     <br />essentials handpicked for your furry <br />friends
+                     <br class="hidden md:block" />essentials handpicked for
+                     your furry <br class="hidden md:block" />friends
                   </p>
                </div>
+               <!-- Footer menu -->
                <div class="flex align-bottom">
                   <ul class="flex flex-col gap-1 md:gap-5 lg:gap-8 justify-end">
                      <li class="text-sm lg:text-base font-medium">
@@ -651,6 +660,7 @@
                      </li>
                   </ul>
                </div>
+               <!-- contact section -->
                <div class="flex flex-col justify-end gap-2">
                   <h4 class="text-sm lg:text-base">Follow Us</h4>
                   <div class="flex gap-7">
