--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             <div
                class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-6 justify-between gap-4 sm:gap-6 w-full"
             >
+               <!-- card 01 -->
                <div class="card bg-[#F9DF8A]">
                   <figure class="px-8 pt-10">
                      <div class="bg-white rounded-full px-6 py-6">
@@ -123,6 +124,7 @@
                      <p class="text-[15px] font-medium">3-items</p>
                   </div>
                </div>
+               <!-- card 02 -->
                <div class="card bg-[#F9DF8A]">
                   <figure class="px-8 pt-10">
                      <div class="bg-white rounded-full px-6 py-6">
@@ -134,6 +136,7 @@
                      <p class="text-[15px] font-medium">3-items</p>
                   </div>
                </div>
+               <!-- card 03 -->
                <div class="card bg-[#F9DF8A]">
                   <figure class="px-8 pt-10">
                      <div class="bg-white rounded-full px-6 py-6">
@@ -145,6 +148,7 @@
                      <p class="text-[15px] font-medium">3-items</p>
                   </div>
                </div>
+               <!-- card 04 -->
                <div class="card bg-[#F9DF8A]">
                   <figure class="px-8 pt-10">
                      <div class="bg-white rounded-full px-6 py-6">
@@ -156,6 +160,7 @@
                      <p class="text-[15px] font-medium">3-items</p>
                   </div>
                </div>
+               <!-- card 05 -->
                <div class="card bg-[#F9DF8A]">
                   <figure class="px-8 pt-10">
                      <div class="bg-white rounded-full px-6 py-6">
@@ -167,6 +172,7 @@
                      <p class="text-[15px] font-medium">3-items</p>
                   </div>
                </div>
+               <!-- card 06 -->
                <div class="card bg-[#F9DF8A]">
                   <figure class="px-8 pt-10">
                      <div class="bg-white rounded-full px-6 py-6">
