paddng problem solved

--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
                      Exclusive training tips, ticks, product deals and more.
                   </p>
                   <label
-                     class="border-none flex items-center gap-2 py-3 lg:py-[18px] pl:3 lg:pl-5 pr-20 lg:pr-72 bg-white rounded-lg"
+                     class="border-none flex items-center gap-2 py-3 lg:py-[18px] pl-3 lg:pl-5 pr-20 lg:pr-72 bg-white rounded-lg"
                   >
                      <svg
                         xmlns="http://www.w3.org/2000/svg"
