image width fix

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </div>
          </section>
 
-         <!-- Pet product section -->
+         <!--  Trending Pet product section -->
          <section
             class="w-full mt-14 sm:mt-32 sm:border-b border-gray-400 py-4 sm:py-36 sm:bg-[#FFF9F4]"
          >
@@ -198,8 +198,10 @@
                <div
                   class="grid grid-cols-1 lg:grid-cols-[40%_auto] xl:grid-cols-[32%_auto] gap-4"
                >
-                  <div class="relative min-h-[420px] rounded-xl bg-[#F9DF8A]">
-                     <div class="px-8">
+                  <div
+                     class="relative min-h-[405px] sm:min-h-[420px] rounded-xl bg-[#F9DF8A]"
+                  >
+                     <div class="px-10 sm:px-14 md:px-16 lg:px-8">
                         <h1 class="mt-14 mb-6 text-3xl adlam-display">
                            T- Shirt For Dogs
                         </h1>
@@ -211,8 +213,14 @@
                            Shop Now
                         </button>
                      </div>
-                     <div class="absolute bottom-0 right-1">
-                        <img src="assets/cute-pet-small.png" alt="" />
+                     <div
+                        class="sm:w-[42%] md:w-[38%] lg:w-[58%] 2xl:w-[50%] absolute bottom-0 right-0"
+                     >
+                        <img
+                           class="w-full"
+                           src="assets/cute-pet-small.png"
+                           alt=""
+                        />
                      </div>
                   </div>
                   <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
